article controller tests